--- a/DL/DL/Views/Shared/_UserMenu.cshtml
+++ b/DL/DL/Views/Shared/_UserMenu.cshtml
@@ -2,7 +2,7 @@
 {
     <ul class="user-menu">
         <li class="dropdown pull-right">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Have a good date!  <span class="glyphicon glyphicon-user"></span> @Session["Name"].ToString()  (員工編號 @Session["Account"].ToString()) <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Have a good day!  <span class="glyphicon glyphicon-user"></span> @Session["Name"].ToString()  (員工編號 @Session["Account"].ToString()) <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
                 @*<li><a href="#">@*<svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg>Profile</a></li>*@
                 <li><a href="/User/Edit"><svg class="glyph stroked gear"><use xlink:href="#stroked-gear"></use></svg> 帳號設定</a></li>
